@@ -1,9 +1,10 @@
 (ns clj-kondo.Doclet
   (:gen-class
-    :methods [#^{:static true} [start [com.sun.javadoc.RootDoc] boolean]]))
+   :methods [#^{:static true} [start [com.sun.javadoc.RootDoc] boolean]])
+  (:import [javax.tools ToolProvider DocumentationTool]))
 
 (defn write-class [docmap]
-  (println "hello!" docmap))
+  (def d docmap))
 
 (declare extract-docs)
 (def doc-keys 
@@ -28,16 +29,43 @@
   })
 
 (defn extract-docs [doc-obj]
+  (println "class" (type doc-obj))
+  (def do doc-obj)
   (reduce-kv
-    (fn [docmap k extractor] 
-      (try 
+    (fn [docmap k extractor]
+      (try
         (assoc docmap k (extractor doc-obj))
         (catch Exception e docmap)))
    {} doc-keys))
 
 (defn start [root]
-  (doall (pmap write-class (map extract-docs (.classes root))))
+  (def r root)
+  #_(doall (pmap write-class (map extract-docs (.classes root))))
   true)
 
 (defn -start [root]
   (start root))
+
+;; requires JDK 11 now: JAVA_HOME=~/Downloads/jdk-11.0.2.jdk/Contents/Home
+(defn main []
+  (let [dt (ToolProvider/getSystemDocumentationTool)]
+    (.run dt nil nil nil
+          (into-array [;; "--help"
+                       ;; "--add-modules" "java.base"
+                       "-doclet" "clj_kondo.Doclet"
+                       "-public"
+                       "--source-path" "/Users/Borkdude/git/jdk/src/java.base/share/classes"
+                       "java.lang"]))))
+
+(comment
+  (count (.classes r))
+  (map (fn [i c] [i (.name c)]) (range) (.classes r))
+  (def t (aget (.classes r) 15))
+  (count (.methods t))
+  (map #(.name %) (.methods t))
+  (def sleep (aget (.methods t) 2))
+  (.isVarArgs sleep)
+  (count (.parameters sleep))
+  (def sleep2 (aget (.methods t) 3))
+  (count (.parameters sleep2))
+  )
